tests/NormalTests/paczka1/small_fuzzy/48072028.err
Error in line 1: t5q8L A327 40,3
Error in line 8: ArPArU A327 47,0
Error in line 2: t5q8L S636 85,9
Error in line 11: Ms1YDt S636 2,3
Error in line 9: ArPArU A227 33,1
